# ChangeLog for sys-apps/baselayout-prefix
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*baselayout-prefix-1.12.5-r5 (09 Nov 2007)

  09 Nov 2007; Fabian Groffen <grobian@gentoo.org>
  +baselayout-prefix-1.12.5-r5.ebuild:
  Fix for bug #183874, create libdir symlinks when using a multilib profile

*baselayout-prefix-1.12.5-r4 (14 May 2007)

  14 May 2007; Fabian Groffen <grobian@gentoo.org>
  files/baselayout-1.12.5-prefix.patch, -baselayout-prefix-1.12.5-r3.ebuild,
  +baselayout-prefix-1.12.5-r4.ebuild:
  Change path in profile to have host-specific paths to come after prefix
  path, such that they don't overrule e.g. opt/bin from prefix. Added sbin
  variants to normal user PATH for prefix usage.

*baselayout-prefix-1.12.5-r3 (13 Apr 2007)

  13 Apr 2007; Fabian Groffen <grobian@gentoo.org>
  files/baselayout-1.12.5-prefix.patch, -baselayout-prefix-1.12.5-r2.ebuild,
  +baselayout-prefix-1.12.5-r3.ebuild:
  Add host manpath in 99basic file, such that it ends up as last in the
  MANPATH, which is what we want

*baselayout-prefix-1.12.5-r2 (03 Dec 2006)

  03 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  files/baselayout-1.12.5-prefix.patch, -baselayout-prefix-1.12.5-r1.ebuild,
  +baselayout-prefix-1.12.5-r2.ebuild:
  Fix manpath to include the system manpath and to not to include usr/local in
  the prefix, as the prefix is the replacement of that.

*baselayout-darwin-1.11.11-r1 (07 Aug 2005)

  07 Aug 2005; Joseph Jezak <josejx@gentoo.org>
  +files/dont-destroy-path.patch, +baselayout-darwin-1.11.11-r1.ebuild:
  Fixed less than stellar profile handling of PATH.

  13 May 2005; <gongloo@gentoo.org> baselayout-darwin-1.11.11.ebuild:
  Fixed xargs command-line argument (--null to -0).

*baselayout-darwin-1.11.11 (12 May 2005)

  12 May 2005; Joseph Jezak <josejx@gentoo.org> +metadata.xml,
  +baselayout-darwin-1.11.11.ebuild:
  Initial commit.
