@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  18 Mar 2009; Fabian Groffen <grobian@gentoo.org>
+  baselayout-prefix-1.12.5-r5.ebuild, baselayout-prefix-1.12.5-r5.ebuild:
+  inherit prefix
+
 *baselayout-prefix-1.12.5-r5 (09 Nov 2007)
 
   09 Nov 2007; Fabian Groffen <grobian@gentoo.org>
